--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
     head
-        title ShardFiles
+        title FileShard
         link(href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', rel='stylesheet')
         link(href='../css/stylesheet.css', rel='stylesheet')
         script(src='/socket.io/socket.io.js')
@@ -28,7 +28,7 @@ html(lang='en')
                         input(type='submit', class='btn btn-outline-primary' name='uploadFile', value='Upload File')
                 div.main.col-1.offset-3
                     a(href='files')
-                        button(type='button' class='btn btn-outline-primary') Storage
+                        button(type='button' class='btn btn-outline-primary') Uploaded Files
         div.row
             div.col-3
             div.main.col-6.offset-3
