--- a/public/views/files/index.pug
+++ b/public/views/files/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
     head
-        title ShardFiles - Files
+        title Files
         link(href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', rel='stylesheet')
         link(href='../../css/stylesheet.css', rel='stylesheet')
         script(src='/socket.io/socket.io.js')
@@ -10,7 +10,7 @@ html(lang='en')
         div.row
             div#container.text-center
                 h3#nodeId= 'Node ' + nodeId
-                h3#title= 'Download Files'
+                h3#title= 'Files'
 
         div.row
             div.col-6.offset-3
